--- a/src/main/webapp/clientmanager/manageuserdetails/managealphanumerics.xhtml
+++ b/src/main/webapp/clientmanager/manageuserdetails/managealphanumerics.xhtml
@@ -110,7 +110,7 @@
                                           required="true" requiredMessage="Aphanumerics Required" 
                                           >
                             <f:selectItem itemLabel="Select Sender ID"/>
-                            <f:selectItems  value="#{user.comboAlphanumerics}"  />
+                            <f:selectItems  value="#{userController.comboAlphanumerics}"  />
                             
                         </p:selectOneMenu >
                                             </td>
