--- a/src/main/webapp/clientmanager/managereseller/addreseller.xhtml
+++ b/src/main/webapp/clientmanager/managereseller/addreseller.xhtml
@@ -28,7 +28,7 @@
                             <tr >
                                 <td style="width: 200px"><h:outputLabel for="username" value="Username" /></td>
                                 <td><p:inputText id="username" 
-                                                 value="#{user.username}" 
+                                                 value="#{userController.username}" 
                                                  required="false" 
                                                  placeholder="" 
                                                  requiredMessage="Enter Username">
@@ -40,7 +40,7 @@
 
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="password" value="Password" /></td>
-                                <td><p:inputText id="password" value="#{user.password}" 
+                                <td><p:inputText id="password" value="#{userController.password}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter password"  
@@ -55,7 +55,7 @@
 
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="smscredits" value="SMS Credits" /></td>
-                                <td><p:inputText id="smscredits" value="#{user.smsCredits}" 
+                                <td><p:inputText id="smscredits" value="#{userController.smsCredits}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter credits"  
@@ -72,7 +72,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="organization" 
                                                                         value="Organization" /></td>
-                                <td><p:inputText id="organization" value="#{user.organization}" 
+                                <td><p:inputText id="organization" value="#{userController.organization}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter organization"  
@@ -89,7 +89,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="useremail" 
                                                                         value="User Email" /></td>
-                                <td><p:inputText id="useremail" value="#{user.userEmail}" 
+                                <td><p:inputText id="useremail" value="#{userController.userEmail}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter User Email"  
@@ -109,7 +109,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="usermobile" 
                                                                         value="User Mobile" /></td>
-                                <td><p:inputText id="usermobile" value="#{user.userMobile}" 
+                                <td><p:inputText id="usermobile" value="#{userController.userMobile}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter User Mobile"  
@@ -125,7 +125,7 @@
                                                                         value="Enable email alert when credit is over" /></td>
                                 <td>
                                     <p:selectBooleanCheckbox id="enableemailalert"
-                                                             value="#{user.enableEmailAlertWhenCreditOver}"
+                                                             value="#{userController.enableEmailAlertWhenCreditOver}"
                                                              />
                                 </td>
 
@@ -135,7 +135,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="alertthreshold" 
                                                                         value="Alert Threshold" /></td>
-                                <td><p:inputText id="alertthreshold" value="#{user.alertThreshold}" 
+                                <td><p:inputText id="alertthreshold" value="#{userController.alertThreshold}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage=""  
@@ -149,7 +149,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="costpersms" 
                                                                         value="Cost Per SMS" /></td>
-                                <td><p:inputText id="costpersms" value="#{user.cost_per_sms}" 
+                                <td><p:inputText id="costpersms" value="#{userController.cost_per_sms}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage=""  
@@ -164,7 +164,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="arrears" 
                                                                         value="Arrears" /></td>
-                                <td><p:inputText id="arrears" value="#{user.arrears}" 
+                                <td><p:inputText id="arrears" value="#{userController.arrears}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage=""  
@@ -182,7 +182,7 @@
                                 <td>
 
                                     <img id="progressbar" src="./images/ajax-loader.gif" style="display:none" />
-                                    <p:commandButton ajax="false"  value="Save" icon="fa fa-save"  actionListener="#{user.saveReseller()}"
+                                    <p:commandButton ajax="false"  value="Save" icon="fa fa-save"  actionListener="#{userController.saveReseller()}"
                                                      onclick="document.getElementById('progressbar').style.display = 'block'"  
                                                      id="savegroupbutton"    >
                                     </p:commandButton >
