--- a/src/main/webapp/clientmanager/manageuserdetails/addsmsuser.xhtml
+++ b/src/main/webapp/clientmanager/manageuserdetails/addsmsuser.xhtml
@@ -28,7 +28,7 @@
                             <tr >
                                 <td style="width: 200px"><h:outputLabel for="username" value="Username" /></td>
                                 <td><p:inputText id="username" 
-                                                 value="#{user.username}" 
+                                                 value="#{userController.username}" 
                                                  required="false" 
                                                  placeholder="" 
                                                  requiredMessage="Enter Username"
@@ -41,7 +41,7 @@
 
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="password" value="Password" /></td>
-                                <td><p:inputText id="password" value="#{user.password}" 
+                                <td><p:inputText id="password" value="#{userController.password}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter password"  
@@ -57,7 +57,7 @@
 
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="smscredits" value="SMS Credits" /></td>
-                                <td><p:inputText id="smscredits" value="#{user.smsCredits}" 
+                                <td><p:inputText id="smscredits" value="#{userController.smsCredits}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter credits" >
@@ -75,7 +75,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="organization" 
                                                                         value="Organization" /></td>
-                                <td><p:inputText id="organization" value="#{user.organization}" 
+                                <td><p:inputText id="organization" value="#{userController.organization}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter organization"  
@@ -93,9 +93,9 @@
                                 <td>   
 
                                     <p:selectOneMenu id="safaricomalphanumeric" 
-                                                     value="#{user.alphanumeric}">
+                                                     value="#{userController.alphanumeric}">
                                         <f:selectItem itemLabel="Select Sender ID" itemValue="" />
-                                        <f:selectItems value="#{user.comboAlphanumerics}" />
+                                        <f:selectItems value="#{userController.comboAlphanumerics}" />
                                     </p:selectOneMenu>
 
 
@@ -111,7 +111,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="useremail" 
                                                                         value="User Email" /></td>
-                                <td><p:inputText id="useremail" value="#{user.userEmail}" 
+                                <td><p:inputText id="useremail" value="#{userController.userEmail}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter User Email"  
@@ -131,7 +131,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="usermobile" 
                                                                         value="User Mobile" /></td>
-                                <td><p:inputText id="usermobile" value="#{user.userMobile}" 
+                                <td><p:inputText id="usermobile" value="#{userController.userMobile}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="Enter User Mobile"  
@@ -147,7 +147,7 @@
                                                                         value="Enable email alert when credit is over" /></td>
                                 <td>
                                     <p:selectBooleanCheckbox id="enableemailalert"
-                                                             value="#{user.enableEmailAlertWhenCreditOver}"
+                                                             value="#{userController.enableEmailAlertWhenCreditOver}"
                                                              />
                                 </td>
 
@@ -157,7 +157,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="alertthreshold" 
                                                                         value="Alert Threshold" /></td>
-                                <td><p:inputText id="alertthreshold" value="#{user.alertThreshold}" 
+                                <td><p:inputText id="alertthreshold" value="#{userController.alertThreshold}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage=""  
@@ -171,7 +171,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="costpersms" 
                                                                         value="Cost Per SMS" /></td>
-                                <td><p:inputText id="costpersms" value="#{user.cost_per_sms}" 
+                                <td><p:inputText id="costpersms" value="#{userController.cost_per_sms}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage="">
@@ -187,7 +187,7 @@
                             <tr>
                                 <td style="width: 200px"><h:outputLabel for="arrears" 
                                                                         value="Arrears" /></td>
-                                <td><p:inputText id="arrears" value="#{user.arrears}" 
+                                <td><p:inputText id="arrears" value="#{userController.arrears}" 
                                                  required="true" 
                                                  placeholder="" 
                                                  requiredMessage=""  
@@ -205,7 +205,7 @@
                                 <td>
 
                                     <img id="progressbar" src="./images/ajax-loader.gif" style="display:none" />
-                                    <p:commandButton ajax="false"  value="Save" icon="fa fa-save"  actionListener="#{user.saveUser(user)}"
+                                    <p:commandButton ajax="false"  value="Save" icon="fa fa-save"  actionListener="#{userController.saveUser(userController)}"
                                                      onclick="document.getElementById('progressbar').style.display = 'block'"  
                                                      id="savegroupbutton"    >
                                     </p:commandButton >
