--- a/src/main/webapp/clientmanager/groups/viewgroups.xhtml
+++ b/src/main/webapp/clientmanager/groups/viewgroups.xhtml
@@ -52,13 +52,15 @@
                                 
                                 <p:commandLink style="padding: .3em 1em;" 
                                                id="editbutton"
-                                               oncomplete="PF('editgroupmodal').show();">
+                                               oncomplete="PF('editgroupmodal').show();"
+                                               update="composition:editgroupmodal" 
+                                               >
 <h:graphicImage 
                                         value="resources/images/edit.gif" width="15px">
 
                                     </h:graphicImage>
                                     <p:ajax  listener="#{callBackScroller.setCurrentGroupItem1(data)}" 
-                                             update="composition:editgroupmodal" />
+                                             />
                                     <p:tooltip for="editbutton" value="Click to edit group"/>
                                 </p:commandLink>
                                 
