--- a/src/main/webapp/clientmanager/managereseller/managereseller.xhtml
+++ b/src/main/webapp/clientmanager/managereseller/managereseller.xhtml
@@ -315,7 +315,8 @@
                                                              >
                                                 </p:inputText>
                                             
-                                             <h:inputText id="previd" value="#{userScroller.currentItem.previousUsername}"></h:inputText>
+                                                <h:inputText id="previd" value="#{userScroller.currentItem.previousUsername}" 
+                                                             style="visibility: hidden"></h:inputText>
                                             </td>
                                         </tr>
 
