--- a/src/main/webapp/clientmanager/manageuserdetails/managealphanumerics.xhtml
+++ b/src/main/webapp/clientmanager/manageuserdetails/managealphanumerics.xhtml
@@ -66,7 +66,7 @@
                                 </p:commandLink>  
                                 
                                      <p:commandLink rendered="#{userScroller.amIResellersUser()}" style="padding: .3em 1em;" 
-                                                    id="deletebutton"
+                                                      id="deletebutton"
                                                ajax="true"
                                                >
 <h:graphicImage 
@@ -101,7 +101,7 @@
                         </h:inputHidden></td></tr>
 
                                         <tr>
-                                            <td ><h:outputLabel for="groupdescription" value="Alphanumeric" /></td>
+                                            <td ><h:outputLabel  value="Alphanumeric" /></td>
                                             <td  >
                                                 <p:selectOneMenu  
                                                     value="#{alphaScroller.currentItem.name}"
